步高属性移动到createAttributes()